--- a/healthServiceApp/src/main/resources/templates/fragments/forms.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/forms.html
@@ -98,16 +98,13 @@
         <small id="lastNameHelp" class="form-control-feedback" th:each="error : ${#fields.errors('lastName')}" th:text="${error}">Error Message</small>
     </div>
 
-    <fieldset class="form-group" th:classappend="${#fields.hasErrors('title')}? 'has-danger'">
-        <label for="titleId">Титла</label>
-        <div class="form-check" th:each="title,iter : ${titles}">
-            <label class="form-check-label">
-                <input type="radio" class="form-check-input" id="titleId" th:value="${title.getName()}" th:field="*{title}" th:checked="${editDoctorBindingModel.title==title.getName()}?'checked':''"/>
-                <span th:text="${title.getName()}"></span>
-            </label>
-        </div>
-        <small id="titleHelp" class="form-control-feedback" th:each="error : ${#fields.errors('title')}" th:text="${error}">Error Message</small>
-    </fieldset>
+    <div class="form-group" th:classappend="${#fields.hasErrors('title')}? 'has-danger'">
+        <label for="titleIdRegister">Титла</label>
+        <select class="form-control" id="titleIdRegister" name="titles" th:field="${titles}">
+            <option th:each="title : ${titles}" th:value="${title.name}" th:text="${title.name}" th:selected="${title.name == editDoctorBindingModel.title}">Option 1</option>
+        </select>
+        <small id="titleHelpRegister" class="form-control-feedback" th:each="error : ${#fields.errors('title')}" th:text="${error}">Error Message</small>
+    </div>
 
     <div class="form-group" th:classappend="${#fields.hasErrors('specialities')}? 'has-danger'">
         <label for="specialitiesId">Специалност(и)</label>
