--- a/healthServiceApp/src/main/resources/templates/exceptions/doze-not-found.html
+++ b/healthServiceApp/src/main/resources/templates/exceptions/doze-not-found.html
@@ -12,7 +12,7 @@
 <main>
     <div class="container">
         <br/>
-        <h1 class="h1">404 Not Found</h1>
+        <h1 class="h1">Няма такава доза за това лекарство!</h1>
         <br/>
         <br/>
         <a class="btn btn-primary" href="/">Начало</a>
