Edit navbar -> sticky

--- a/healthServiceApp/src/main/resources/templates/fragments/parts.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/parts.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
 
-<nav class="navbar navbar-toggleable-md navbar-inverse" style="background-color: #385d9e;" th:fragment="menu">
+<nav class="navbar navbar-toggleable-md navbar-inverse sticky-top" style="background-color: #385d9e;" th:fragment="menu">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
