--- a/healthServiceApp/src/main/resources/templates/doctor-register.html
+++ b/healthServiceApp/src/main/resources/templates/doctor-register.html
@@ -21,5 +21,6 @@
 </main>
 <script th:src="@{/jquery/jquery.min.js}"></script>
 <script th:src="@{/bootstrap/js/bootstrap.min.js}"></script>
+<!--<script th:src="@{/scripts/specialties-load.js}"></script>-->
 </body>
 </html>
