--- a/healthServiceApp/src/main/resources/templates/fragments/forms.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/forms.html
@@ -93,7 +93,7 @@
     </div>
 
     <fieldset class="form-group" th:classappend="${#fields.hasErrors('title')}? 'has-danger'">
-        <label for="titleId">Изберете нова титла:</label>
+        <label for="titleId">Титла:</label>
         <div class="form-check" th:each="title,iter : ${titles}">
             <label class="form-check-label">
                 <input type="radio" class="form-check-input" id="titleId" th:value="${title.getName()}" th:field="*{title}"/>
@@ -104,7 +104,7 @@
     </fieldset>
 
     <div class="form-group" th:classappend="${#fields.hasErrors('specialities')}? 'has-danger'">
-        <label for="specialitiesId">Изберете специалност(и)</label>
+        <label for="specialitiesId">Специалност(и)</label>
         <select multiple="true" class="form-control" id="specialitiesId" name="specialities" th:field="*{specialities}">
             <option th:each="speciality : ${specialities}" th:value="${speciality.name}" th:text="${speciality.name}">Option 1</option>
         </select>
