--- a/healthServiceApp/src/main/resources/templates/home.html
+++ b/healthServiceApp/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
 <main>
     <br/>
     <div class="container">
-        <h1>Health Service App Home Page</h1>
+        <h1>Съхранвяай и управлявай електронно досието на всеки свой пациент от едно място</h1>
         <br/>
         <div class="container">
             <div id="carouselHome" class="carousel slide" data-ride="carousel">
@@ -25,12 +25,27 @@
                 <div class="carousel-inner" role="listbox">
                     <div class="carousel-item active">
                         <img class="d-block img-fluid" src="images\118jpg3.jpg" width="100%" height="auto" alt="First slide"/>
+                        <div class="carousel-caption d-none d-md-block">
+                            <blockquote style="background-color:rgba(56,93,158,0.58); height: 40px;">
+                                <h3>По-добра грижа за пациента</h3>
+                            </blockquote>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block img-fluid" src="images\119jpg3.jpg" width="100%" height="auto" alt="Second slide"/>
+                        <div class="carousel-caption d-none d-md-block">
+                            <blockquote style="background-color:rgba(56,93,158,0.58); height: 40px;">
+                                <h3>Намери всеки свой пациент бързо и лесно</h3>
+                            </blockquote>
+                        </div>
                     </div>
                     <div class="carousel-item">
                         <img class="d-block img-fluid" src="images\120jpg3.jpg" width="100%" height="auto" alt="Third slide"/>
+                        <div class="carousel-caption d-none d-md-block">
+                            <blockquote style="background-color:rgba(56,93,158,0.58); height: 40px;">
+                                <h3>Оптимизирай работното си време</h3>
+                            </blockquote>
+                        </div>
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselHome" role="button" data-slide="prev">
