Extract page titles in constants, add PageTitle Interseptor, start Add Protocl form

--- a/healthServiceApp/src/main/resources/templates/doctor-edit.html
+++ b/healthServiceApp/src/main/resources/templates/doctor-edit.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>Edit Doctor Profile</title>
+    <title th:text="${title}">Edit Doctor Profile</title>
     <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css"
           th:href="@{/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../static/css/site.css" th:href="@{/css/site.css}"/>
