--- a/healthServiceApp/src/main/resources/templates/medicines/all.html
+++ b/healthServiceApp/src/main/resources/templates/medicines/all.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <title>All Patients</title>
+    <title th:text="${title}">All Medicines</title>
     <link rel="stylesheet" href="../../static/bootstrap/css/bootstrap.min.css"
           th:href="@{/bootstrap/css/bootstrap.min.css}"/>
     <link rel="stylesheet" href="../../static/css/site.css" th:href="@{/css/site.css}"/>
