--- a/healthServiceApp/src/main/resources/templates/fragments/parts.html
+++ b/healthServiceApp/src/main/resources/templates/fragments/parts.html
@@ -15,9 +15,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Начало</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/doctor/all">Всички лекари</a>
-            </li>
+            <!--<li class="nav-item">-->
+                <!--<a class="nav-link" href="/doctor/all">Всички лекари</a>-->
+            <!--</li>-->
             <div sec:authorize="hasRole('DOCTOR')">
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="/patients" id="navbarPatientsDropdownMenu"
